--- a/ElectronicLogbook/Source/MainWindow.xaml
+++ b/ElectronicLogbook/Source/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:ElectronicLogbook"
-        xmlns:tab1="clr-namespace:ElectronicLogbook.AircraftEquipment"
+        xmlns:AircraftEquipment="clr-namespace:ElectronicLogbook.AircraftEquipment"
         FontSize="14"
         Title="ELB" Height="Auto" Width="Auto" Topmost="True" WindowStartupLocation="CenterScreen" WindowStyle="ThreeDBorderWindow">
     <DockPanel>
@@ -25,29 +25,16 @@
                         <TextBlock Text="Aircraft equipment" FontFamily="Arial" TextAlignment="Center" Width="150" Height="22" />
                     </DockPanel>
                 </TabItem.Header>
-                <tab1:AircraftEquipmentControl />
+                <AircraftEquipment:AircraftEquipmentControl />
             </TabItem>
             <TabItem Height="30" Background="White" BorderBrush="Transparent">
                 <TabItem.Header>
                     <DockPanel>
                         <TextBlock Text="VAIS participant" FontFamily="Arial" Width="150" Height="22" TextAlignment="Center" />
-
                         <Separator />
                     </DockPanel>
                 </TabItem.Header>
-                <DockPanel>
-                    <ListView>
-                        <ListView.View>
-                            <GridView >
-                                <GridViewColumn Header="Participant Name" Width="100" />
-                                <GridViewColumn Header="Participant Part Number"  Width="150" />
-                                <GridViewColumn Header="Participant Version Number"  Width="200" />
-                                <GridViewColumn Header="Participant Description"  Width="200" />
-                                <GridViewColumn Header="Participant Location"  Width="200" />
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                </DockPanel>
+                <local:VAISParticipantControl />
             </TabItem>
             <TabItem Height="30" Background="White" BorderBrush="Transparent">
                 <TabItem.Header>
@@ -70,7 +57,7 @@
                     </ListView>
                 </DockPanel>
             </TabItem>
-            <TabItem Height="30" Background="White" BorderBrush="DarkGray">
+            <TabItem Height="30" Background="White" BorderBrush="Transparent">
                 <TabItem.Header>
                     <DockPanel>
                         <TextBlock Text="Third party softeware" FontFamily="Arial" Width="150" Height="22" TextAlignment="Center" />
@@ -79,7 +66,7 @@
                     </DockPanel>
                 </TabItem.Header>
                 <DockPanel>
-                    <ListView >
+                    <ListView>
                         <ListView.View>
                             <GridView >
                                 <GridViewColumn Header="Software Name" Width="150" />
