--- a/ElectronicLogbook/Source/AircraftEquipmentControl.xaml
+++ b/ElectronicLogbook/Source/AircraftEquipmentControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ElectronicLogbook.AircraftEquipment.AircraftEquipmentControl"
+﻿<UserControl x:Class="ElectronicLogbook.AircraftEquipmentControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
